# vue-tauri-vite

./: .eslintrc.cjs  .eslintrc.js  .gitignore  .rsw.json  .rswrc.json  Cargo.toml  Makefile  README.md  init-wasm.sh  lint-staged.config.js  package-lock.json  package.json  rsw.toml  tsconfig.json  vite.config.ts
.github/workflows/: clean-workflow.yml  release.yml
definitions/: getContextValues.ts
src/: App.vue  main.ts
src-go/: go.mod
src-tauri/: Cargo.toml  Makefile  tauri.conf.json
src-tauri/.cargo/: config  config_disabled
src-tauri/golib/: main.go
src-tauri/src/: build.rs  cmd.rs  main.rs
src-wasm/: Cargo.toml  vue-wasm.ts
src-wasm/src/: lib.rs  my_cmp.rs
src/components/: Add.tsx  HelloTsx.tsx  HelloWorld.vue
src/definitions/: env.d.ts  getContextValues.d.ts  src-wasm.d.ts  vite-env.d.ts  wasm-rust.d.ts
wasm-rust/: Cargo.toml
wasm-rust/src/: lib.rs
