[package]
name = "app"
version = "0.1.10"
description = "A Tauri App"
authors = ["thomas@castelly.fr"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "1", features = ["api-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

# enable debug
# [profile.release.package.wry]
# debug = true
# debug-assertions = true
# ./node_modules/.bin/tauri build --debug
# ./src-tauri/target/debug/bundle/appimage/vite-vue_0.1.1_amd64.AppImage
